deployments/core/traefik/dashboard/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(\`traefik.MY_DOMAIN.com\`) && (PathPrefix(\`/api\`) || PathPrefix(\`/dashboard\`))
      kind: Rule
      priority: 10
      services:
        - name: api@internal
          kind: TraefikService
      #middlewares:
      #  - name: traefik-dashboard-auth
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
